Solved overflow

--- a/estil.less
+++ b/estil.less
@@ -55,23 +55,27 @@
                 margin-left: 9vw;
                 margin-right: 9vw;
                 background-color: #ea878575;
-                height: 72vh;
+                min-height: auto;
+                margin-bottom: 2vh;
 
                 > section 
                 {
                     padding: 2vw;
                     border: 1px solid #f3a683;
+                    max-width: 100vw;
+                    height: 65vh;
+                    overflow: auto;
                     
                     > h2, h1 
                     {
-                        font-size: 4vh;
+                        font-size: 26px;
                         font-weight: bold;
                         margin-bottom: 2vh;
                     }
 
                     > p 
                     {
-                        font-size: 2.5vh;
+                        font-size: 20px;
                     }
                 }
                 #contents
@@ -88,7 +92,8 @@
                     > img 
                     {
                         margin-top: 2vh;
-                        width: 12vw;
+                        width: 100%;
+                        max-height: 100%;
                     }
                 }
 
@@ -166,7 +171,8 @@
                 display: flex;
                 padding-top: 2vh;
                 background-color: #ea878575;
-                height: 72vh;
+                height: auto;
+                margin-bottom: 2vh;
 
                 > section 
                 {
@@ -175,14 +181,14 @@
                     
                     > h2, h1 
                     {
-                        font-size: 4vh;
+                        font-size: 26px;
                         font-weight: bold;
                         margin-bottom: 2vh;
                     }
 
                     > p 
                     {
-                        font-size: 2.5vh;
+                        font-size: 20px;
                     }
                 }
                 #contents
@@ -199,7 +205,8 @@
                     > img 
                     {
                         margin-top: 2vh;
-                        width: 12vw;
+                        width: 100%;
+                        max-height: 100%;
                     }
                 }
 
@@ -278,6 +285,7 @@
                 flex-wrap: wrap;
                 padding-top: 2vh;
                 background-color: #ea878575;
+                margin-bottom: 2vh;
 
                 > section 
                 {
@@ -287,14 +295,14 @@
 
                     > h2, h1 
                     {
-                        font-size: 4vh;
+                        font-size: 26px;
                         font-weight: bold;
                         margin-bottom: 2vh;
                     }
 
                     > p 
                     {
-                        font-size: 2.5vh;
+                        font-size: 20px;
                     }
                 }
                 #contents
@@ -311,7 +319,8 @@
                     > img 
                     {
                         margin-top: 2vh;
-                        width: 12vw;
+                        width: 100%;
+                        max-height: 100%;
                     }
                 }
 
